--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # To configure JDBC Url to connect to DB
-spring.datasource.url=jdbc:mysql://localhost:3306/db_ms_spring_boot_spring_cloud?useSSl=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db_spring_boot_thymeleaf_blog_app?useSSl=false&createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=*ruTuch7D7ub
 
 # Loading class `com.mysql.jdbc.Driver'==> This is deprecated.
 # The new driver class is `com.mysql.cj.jdbc.Driver'. The driver is
@@ -10,19 +10,22 @@ spring.datasource.password=
 # spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 ## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# To print the queries into the console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show-sql=true
 # Only in Dev mode
 # none, create-only, drop, create, create-drop, validate, update
 # Hibernate will automatically create the tables in the DB
-spring.jpa.hibernate.ddl-auto=update
-# To print the queries into the console
-spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl.auto=update
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # To well format queries
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-# No run any SQL
-# spring.sql.init.mode=never
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+spring.logging.level.org.hibernate.SQL=DEBUG
+spring.logging.level.org.hibernate.type=TRACE
 spring.mvc.format.date=yyyy-MM-dd
+spring.profiles.active=local
+
+
+
